# appsflyer-cocos2dx-plugin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HelloWorldScene.cpp  HelloWorldScene.h  README.md  cmake_install.cmake
.github/workflows/: check_headers.yml
.github/workflows/Scripts/: checkImport.py
.lsp/.cache/: db.transit.json
AppIcon.xcassets/Icon-180.imageset/: Contents.json
AppsFlyerX/: AppsFlyerX.cpp  AppsFlyerX.h  AppsFlyerXApple.h  AppsFlyerXApple.mm  AppsFlyerXAppleHelper.mm
CMakeScripts/: ReRunCMake.make
Classes/: AppDelegate.cpp  HelloWorldScene.cpp  InAppPurchaseValidationCallback
Classes/AppsFlyer/: AFSDKXPurchaseDetails.cpp  AFSDKXPurchaseDetails.h  AFSDKXValidateAndLogResult.cpp  AFSDKXValidateAndLogResult.h  AFXAdRevenueData.cpp  AFXAdRevenueData.h  AppsFlyerProxyX.cpp  AppsFlyerProxyX.h  AppsFlyerX+AppController.h  AppsFlyerX+AppController.m  AppsFlyerX.cpp  AppsFlyerX.h  AppsFlyerXAndroid.cpp  AppsFlyerXAndroid.h  AppsFlyerXApple.h  AppsFlyerXApple.mm  AppsFlyerXAppleDeepLinkDelegate.h  AppsFlyerXAppleDeepLinkDelegate.mm  AppsFlyerXAppleDeepLinkResult.cpp  AppsFlyerXAppleDeepLinkResult.h  AppsFlyerXAppleDelegate.h  AppsFlyerXAppleDelegate.mm  AppsFlyerXAppleHelper.h  AppsFlyerXAppleHelper.mm  AppsFlyerXConsent.cpp  AppsFlyerXDeepLinkResult.cpp  AppsFlyerXDeepLinkResult.h  EmailCryptTypeX.h
Classes/AppsFlyer/libAppsFlyer/: AFSDKValidateAndLogResult.h  AppsFlyerLib.h  AppsFlyerTracker.h
Classes/AppsFlyerStrict/: AppsFlyerProxyX.cpp  AppsFlyerX.cpp  AppsFlyerX.h  AppsFlyerXAndroid.cpp  AppsFlyerXAndroid.h  AppsFlyerXApple.mm  AppsFlyerXAppleHelper.h  AppsFlyerXMacro.h  EmailCryptTypeX.h
Classes/Strict/: AppsFlyerXAndroid.cpp
Classes/Strict/AppsFlyer/: AFSDKXPurchaseDetails.cpp  AFSDKXPurchaseDetails.h  AFSDKXValidateAndLogResult.cpp  AFSDKXValidateAndLogResult.h  AFXAdRevenueData.cpp  AFXAdRevenueData.h  AppsFlyerProxyX.cpp  AppsFlyerProxyX.h  AppsFlyerX+AppController.h  AppsFlyerX.cpp  AppsFlyerX.h  AppsFlyerXAndroid.cpp  AppsFlyerXAndroid.h  AppsFlyerXApple.h  AppsFlyerXApple.mm  AppsFlyerXAppleDelegate.mm  AppsFlyerXAppleHelper.h  AppsFlyerXAppleHelper.mm  AppsFlyerXMacro.h
Classes/Strict/AppsFlyer/libAppsFlyer/: AFSDKPurchaseDetails.h  AppsFlyerLib.h
Classes/Strict/AppsFlyerStrict/: AppsFlyerX+AppController.h  AppsFlyerXAppleDelegate.mm
docs/: Android_README.md  iOS_README.md  ios.md
proj.android-studio/: build.gradle  gradle.properties  settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle  google-services.json  proguard-rules.pro
proj.android-studio/app/jni/: Android.mk  Application.mk
proj.android-studio/app/jni/hellocpp/: main.cpp
proj.android-studio/app/res/values/: strings.xml
proj.android-studio/app/src/org/cocos2dx/cpp/: AppActivity.java
proj.android-studio/gradle/wrapper/: gradle-wrapper.properties
proj.ios_mac/: AppsFlyerCocos2dX-mobile.entitlements  CMakeCache.txt  Podfile
proj.ios_mac/AppsFlyerCocos2dX.xcodeproj/: project.pbxproj
proj.ios_mac/AppsFlyerCocos2dX.xcodeproj/xcshareddata/xcschemes/: AppsFlyerCocos2dX-mobile.xcscheme
proj.ios_mac/CMakeScripts/: ReRunCMake.make
proj.ios_mac/engine/cocos/core/CMakeScripts/: ReRunCMake.make
proj.ios_mac/ios/: AppController.h  AppController.mm  InAppView.swift  InAppView.xib  Info.plist  LoadableView.swift  RootViewController.mm  SwiftBridge.swift  SwiftCompatibilityStubs.m  ViewController+Alert.swift  main.m
proj.ios_mac/ios/Images.xcassets/Icon-100.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-114.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-120.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-144.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-152.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-29.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-40.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-50.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-57.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-58.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-72.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-76.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-80.imageset/: Contents.json
proj.ios_mac/ios/Images.xcassets/Icon-87.imageset/: Contents.json
proj.ios_mac/mac/: Info.plist
